--- a/public/menu/css/style.css
+++ b/public/menu/css/style.css
@@ -57,8 +57,7 @@ body {
 	padding: 50px;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-	gap: 41px;
-	justify-content: start;
+	justify-items: center;
 }
 @media (min-width: 800px) {
 	.container {
